# web-based-application-object-detection

./: README.md  pyproject.toml
instance/: database.db
website/: __init__.py  auth.py  models.py  views.py
website/static/: index.js
website/templates/: admin.html  base.html  change.html  home.html  login.html  note.html  recognition.html  reserve.html  settings.html  sign_up.html  update_password.html  update_username.html
