[tool.poetry]
name = "repl_nix_web-based-application-object-detection-1"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
Flask-Login = "^0.6.2"
Flask-SQLAlchemy = "^3.0.3"
requests = "^2.28.2"
SQLAlchemy = "^2.0.4"
Werkzeug = "^2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
